<resources>
    <string name="app_name">TodoLIST</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="button">登录</string>
    <string name="user_false"><![CDATA[Username must be >3 characters]]></string>
    <string name="password_false"><![CDATA[Password must be >5 characters]]></string>
    <string name="select_date">日期</string>
    <string name="remind">提醒</string>
    <string name="item_title">标题..</string>
    <string name="description">描述....</string>
    <string name="add_items">Add Items</string>
    <string name="back_button">Back button</string>
    <string name="date_format">%d年%d月%d日</string>
    <string name="choose_yes">确定</string>
    <string name="choose_no">取消</string>
</resources>