<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/image"
        android:layout_height="@dimen/image"
        android:layout_marginTop="@dimen/image"
        android:src="@drawable/main_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_top"
            android:layout_marginEnd="@dimen/text_margin"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ImageButton
            android:layout_width="@dimen/error_image"
            android:layout_height="@dimen/error_image"
            android:layout_marginStart="@dimen/start"
            android:layout_marginTop="@dimen/button_top"
            android:layout_marginEnd="@dimen/button_end"
            android:background="@drawable/false_button_shape"
            android:scaleType="fitXY"
            android:src="@drawable/false_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/error_image"
            android:text="@string/user_false"
            android:textColor="@color/error_text"
            android:layout_marginTop="@dimen/false_top"
            android:layout_marginStart="@dimen/false_start"
            android:background="@color/error_text_background"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/between"
            android:layout_marginEnd="@dimen/text_margin"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:inputType="text" />

        <ImageButton
            android:layout_width="@dimen/error_image"
            android:layout_height="@dimen/error_image"
            android:layout_marginStart="@dimen/start"
            android:layout_marginTop="@dimen/password_top"
            android:layout_marginEnd="@dimen/button_end"
            android:background="@drawable/false_button_shape"
            android:scaleType="fitXY"
            android:src="@drawable/false_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/error_image"
            android:text="@string/password_false"
            android:textColor="@color/error_text"
            android:layout_marginTop="@dimen/password_false_top"
            android:layout_marginStart="@dimen/password_false_start"
            android:background="@color/error_text_background"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_height"
        android:layout_marginEnd="@dimen/text_margin"
        android:background="@drawable/button"
        android:text="@string/button"
        android:textSize="@dimen/button_size" />

</LinearLayout>